fixed footer to not overlap and also be at bottom

--- a/client/src/components/modules/Footer.css
+++ b/client/src/components/modules/Footer.css
@@ -1,9 +1,7 @@
 .Footer-footer {
   width: 100%;
-  position: fixed;
-  bottom: 0;
-  margin-top: auto;
-  height: 40px;
-  padding: 5px;
+  /* bottom: 0; */
+  height: 50px;
+  /* padding: 5px; */
   background-color: var(--lightpurple);
 }
