--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -43,11 +43,15 @@
 }
 
 body {
-  margin: 8% 0% 8% 0%;
+  margin: 8% 0% 0% 0%;
   padding: 0;
   font-family: "Quicksand", sans-serif;
   font-weight: 300;
-  display: flex;
+}
+
+.App-container {
+  min-height: calc(100vh - 150px);
+  /* calc(100vh- 50px); */
   flex-direction: column;
 }
 
